fix: windows shifting animation

--- a/src/components/sbb-card/sbb-card.scss
+++ b/src/components/sbb-card/sbb-card.scss
@@ -52,20 +52,19 @@
   @include sbb.card-variables--xxl;
 }
 
+:host(:not([active]:not([active='false'])):hover) {
+  @include sbb.card--hover('.sbb-card');
+}
+
 .sbb-card {
   @include sbb.card;
 
   width: 100%;
   height: 100%;
-
-  :host(:not([active]:not([active='false'])):hover) & {
-    @include sbb.card--hover;
-  }
 }
 
-slot:not([name]) {
-  display: block;
-  height: 100%;
+.sbb-card__wrapper {
+  @include sbb.card--wrapper;
 }
 
 .sbb-card__opens-in-new-window {
